test/core/errors/syntax_error/zs/unexpected_eof_in_const_definition_error.zs
package unexpected_eof_in_const_definition_error;

const
